--- a/gui/templates/gui/base.html
+++ b/gui/templates/gui/base.html
@@ -1,9 +1,11 @@
 {% load static %}
 <html>
     <head>
+          <meta content="width=device-width, initial-scale=1.0" name="viewport">
         {% block page_info %}
         {% endblock %}
         <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css">
+
     </head>
 
     <body>
