--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -13,7 +13,8 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-md-7 mx-auto">
-                    <form id="launchBot" class="card">
+                    <form id="launchBot" class="card" method="post" action="">
+                        {% csrf_token %}
                         <div class="card-header">
                             <h2 class="text-center">Lancer une exécution du robot</h2>
                         </div>
@@ -38,4 +39,8 @@
                 </div>
             </div>
         </div>
+    {% endblock %}
+
+    {% block js_scripts %}
+        <script src="{% static 'js/main.js' %}"></script>
     {% endblock %}
