--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -16,22 +16,19 @@
                     <form id="launchBot" class="card" method="post" action="">
                         {% csrf_token %}
                         <div class="card-header">
-                            <h2 class="text-center">Lancer une exécution du robot</h2>
-                        </div>
-                        <div class="form-group">
-                            <label for="site">Url du site à cliquer</label>
-                            <input class="form-control" name="site" id="site">
+                            <h2 class="text-center">Lancer une exécution du robot version google ads attack</h2>
                         </div>
                         <div class="form-group">
                             <label for="query">Requête à écrire</label>
                             <input class="form-control" name="query" id="query">
                         </div>
                         <div class="form-group">
-                            <label for="proxy">PROXY</label>
-                            <select class="form-control" name="proxy" id="proxy">
-                                <option value="FR">FR</option>
-                                <option value="US">US</option>
-                            </select>
+                            <label for="query">Nombre de proxy</label>
+                            <input class="form-control" type="number" max="5" name="proxy" id="proxy">
+                        </div>
+                        <div class="form-group">
+                            <label for="query">Headless ?</label>
+                            <input class="form-check-input" type="checkbox" value="" id="headless" checked>
                         </div>
                         <br>
                         <button type="submit" class="btn btn-warning">Launch Bot</button>
