Fix(02):bot_clickerBugFix

--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -19,6 +19,10 @@
                             <h2 class="text-center">Lancer une exécution du robot version google ads attack</h2>
                         </div>
                         <div class="form-group">
+                            <label for="domaine">Nom de domaine</label>
+                            <input class="form-control" name="domaine" id="domaine">
+                        </div>
+                        <div class="form-group">
                             <label for="query">Requête à écrire</label>
                             <input class="form-control" name="query" id="query">
                         </div>
@@ -27,7 +31,7 @@
                             <input class="form-control" type="number" max="5" name="proxy" id="proxy">
                         </div>
                         <div class="form-group">
-                            <label for="query">Headless ?</label>
+                            <label for="query">Online ?</label>
                             <input class="form-check-input" type="checkbox" value="" id="headless" checked>
                         </div>
                         <br>
