add new models, update architecture, update bot clicker to accept google condition

--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -27,8 +27,8 @@
                             <input class="form-control" name="query" id="query">
                         </div>
                         <div class="form-group">
-                            <label for="query">Nombre de proxy</label>
-                            <input class="form-control" type="number" max="5" name="proxy" id="proxy">
+                            <label for="query">Nombre de proxy (max {{nb_proxy}})</label>
+                            <input class="form-control" type="number" max="{{proxy_nb}}" name="proxy" id="proxy">
                         </div>
                         <div class="form-group">
                             <label for="query">Online ?</label>
