--- a/gui/templates/gui/base.html
+++ b/gui/templates/gui/base.html
@@ -9,6 +9,25 @@
     </head>
 
     <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">BotClicker</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Accueil</a>
+                <a class="nav-link" href="/stat">Statistiques</a>
+                <a class="nav-link" href="/execution/">Execution</a>
+                  <a class="nav-link" href="/execution-auto/">Execution Auto</a>
+                <a class="nav-link" href="/admin/">Admin</a>
+
+              </div>
+            </div>
+          </div>
+    </nav>
         {% block content %}
         {% endblock %}
     </body>
