--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -32,7 +32,7 @@
                                 <input class="form-control" type="number" max="{{proxy_nb}}" name="proxy" id="proxy">
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="user_agent">Nombre de proxy (max {{nb_proxy}})</label>
+                                <label for="user_agent">User-agent (max {{nb_user_agent}})</label>
                                 <select class="form-control" name="user_agent" id="user_agent">
                                     {% for user in user_agents %}
                                         <option value="{{user.nom}}">{{user.nom}}</option>
