--- a/gui/templates/gui/index.html
+++ b/gui/templates/gui/index.html
@@ -6,10 +6,19 @@
     {% endblock %}
 
     {% block content %}
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
-                <div class="col-md-8 btn btn-success">
-                    <a href="/execution" class="text-white">GO TO LAUNCH</a>
+                <div class="col-md-8 card mx-auto">
+                    <h1 class="text-center">Accueil BotClicker</h1>
+                    <blockquote>Lancement du bot, mode d'emploi
+                        <ul>
+                            <li>Page exécution: lancement unitaire sur une seule requête avec un proxy</li>
+                            <li>Page exécution auto : Planification d'un lancement avec une liste de mots clés (appuyer sur ctrl +
+                                selectionner les mots clés choisis)</li>
+                            <li>Page admin: ajouter des requetes, des proxy, supervision ...</li>
+                            <li>Page statistique: visualiser les dernières exécutions du bot</li>
+                        </ul>
+                    </blockquote>
                 </div>
             </div>
         </div>
