--- a/gui/templates/gui/planification.html
+++ b/gui/templates/gui/planification.html
@@ -39,7 +39,10 @@
                                     {% endfor %}
                                 </select>
                             </div>
-
+                            <div class="form-group col-md-8 mx-auto">
+                                <label for="delay">Choisir un delai en seconde entre chaque requete</label>
+                                <input class="form-control" type="number" min="1" max="500" name="delay" id="delay">
+                            </div>
                         </div>
 
                         <br>
