--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -28,14 +28,18 @@
                                 <label for="proxy">Nombre de proxy (max {{nb_proxy}})</label>
                                 <input class="form-control" type="number" min="1" max="{{proxy_nb}}" name="proxy" id="proxy">
                             </div>
-                            <div class="form-group col-md-6">
-                                <label for="user_agent">User-agent (max {{nb_user_agent}})</label>
+                            <div class="form-group col-md-6 mx-auto">
+                                <label for="user_agent">User-agent</label>
                                 <select class="form-control" name="user_agent" id="user_agent">
                                     {% for user in user_agents %}
                                         <option value="{{user.nom}}">{{user.nom}}</option>
                                     {% endfor %}
                                 </select>
 
+                            </div>
+                            <div class="form-group col-md-8 mx-auto">
+                                <label>Mode Google Ads ?</label>
+                                <input type="checkbox" checked data-toggle="toggle" id="ads" data-size="xs">
                             </div>
                         </div>
 
