correct history and add google ads mode

--- a/gui/templates/gui/base.html
+++ b/gui/templates/gui/base.html
@@ -21,6 +21,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Accueil</a>
                 <a class="nav-link" href="/stat">Statistiques</a>
                 <a class="nav-link" href="/execution/">Execution</a>
+                  <a class="nav-link" href="/execution-ads/">Execution Ads</a>
                   <a class="nav-link" href="/execution-auto/">Execution Auto</a>
                 <a class="nav-link" href="/admin/">Admin</a>
 
