--- a/gui/templates/gui/exec_ads.html
+++ b/gui/templates/gui/exec_ads.html
@@ -13,11 +13,11 @@
                     <form id="launchBot" class="card" method="post" action="">
                         {% csrf_token %}
                         <div class="card-header">
-                            <h2 class="text-center">Lancer une exécution unitaire du robot</h2>
+                            <h2 class="text-center">Lancer une attaque ads</h2>
                         </div>
                         <div class="row">
                             <div class="form-group col-md-6">
-                                <label for="domaine">Nom de domaine</label>
+                                <label for="domaine">Nom de domaine (à ne pas cliquer)</label>
                                 <input class="form-control" name="domaine" id="domaine">
                             </div>
                             <div class="form-group col-md-6">
@@ -37,10 +37,6 @@
                                 </select>
 
                             </div>
-<!--                            <div class="form-group col-md-8 mx-auto">-->
-<!--                                <label>Mode Google Ads ?</label>-->
-<!--                                <input type="checkbox" checked data-toggle="toggle" id="ads" data-size="xs">-->
-<!--                            </div>-->
                         </div>
 
                         <br>
@@ -52,5 +48,5 @@
     {% endblock %}
 
     {% block js_scripts %}
-        <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/main-ads.js' %}"></script>
     {% endblock %}
