--- a/gui/templates/gui/execution.html
+++ b/gui/templates/gui/execution.html
@@ -37,10 +37,10 @@
                                 </select>
 
                             </div>
-                            <div class="form-group col-md-8 mx-auto">
-                                <label>Mode Google Ads ?</label>
-                                <input type="checkbox" checked data-toggle="toggle" id="ads" data-size="xs">
-                            </div>
+<!--                            <div class="form-group col-md-8 mx-auto">-->
+<!--                                <label>Mode Google Ads ?</label>-->
+<!--                                <input type="checkbox" checked data-toggle="toggle" id="ads" data-size="xs">-->
+<!--                            </div>-->
                         </div>
 
                         <br>
